# Specifix5.github.io

./: .gitignore  404.html  50x.html  CNAME  LICENSE  README.md  astro.config.mjs  effect.js  index.html  index.js  package-lock.json  package.json  pnpm-lock.yaml  site.webmanifest  sitemap.xml  stars.js  style.css  svelte.config.js  tsconfig.json  webeffect.js
.github/workflows/: astro.yml
.well-known/: discord
api_backend/: Cargo.toml
api_backend/src/: main.rs
api_backend/src/routes/: _static.rs  index.rs  ip.rs  mailbox.rs  proxy.rs
api_backend/src/utils/: catcher.rs  constants.rs  logging.rs  types.rs
assets/cursors/: miku_beam.cur
assets/scripts/: index.js
assets/styles/: main.css
public/: site.webmanifest
public/ascii/: neko_ascii.txt
public/cursors/: miku_hand.cur  miku_normal.cur  miku_sing.cur
src/components/: AsciiNekoMiku.astro  BaseTab.astro  CopyWebButtonSnippet.svelte  HowLongAgoWasMyProgrammingHobby.svelte  Icon.astro  IpText.svelte  JoinDiscordRedirect.svelte  RandomMiku.svelte  SocialMediaButton.astro  TabButton.svelte  WebButton.astro  WebButtonFriends.astro  asciiCat.astro  baseHead.astro  dayNight.svelte  emoji.astro  infoBox.astro  infoContainer.astro  ipText.svelte  messageBox.svelte  popup.svelte  popupButton.svelte
src/components/popups/: popupAboutMe.astro  popupContacts.astro
src/layouts/: BaseLayout.astro  mainLayout.astro
src/pages/: 404.astro  discord.astro  index.astro  neko_ascii.txt.astro
src/scripts/: tabs.ts  utils.ts
src/styles/: base.scss  main.scss  tabs.scss  vars.scss
(+5 files in other folders)
